--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "firebase": "^11.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
-    "react-simple-star-rating": "^5.1.7"
+    "react-simple-star-rating": "^5.1.7",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
